# MLB-Notify-App

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RESEARCH.md  SPEC.md  package-lock.json  plan.md  security_best_practices_report.md
.github/workflows/: ios-testflight-main.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  redis_client.py
backend/app/api/v1/: players.py  router.py  test.py  users.py
backend/app/constants/: japanese_players.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: event_detector.py  mlb_api.py  notification.py  scheduler.py
backend/tests/: test_event_detector.py  test_mlb_api.py  test_notification.py  test_redis_client.py  test_scheduler_logic.py  test_users_api.py
frontend/: .env.example  app.config.ts  app.json  eas.json  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx  onboarding.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx
frontend/components/: EventToggle.tsx  PlayerCard.tsx  PlayerEventModal.tsx
frontend/constants/: colors.ts
frontend/hooks/: usePreferences.ts  usePushToken.ts
frontend/lib/: api.ts  notifications.ts  storage.ts
frontend/types/: api.ts
